--- a/index.html
+++ b/index.html
@@ -553,8 +553,9 @@ Bij elk project start ik standaard met een concrete demo van jouw website, zodat
                 </svg>
               </div>
               <div>
-                <h3 class="step-title">Voor elk type bedrijf</h3>
-                <p class="step-description">Of je nu zzp’er bent, een mkb-bedrijf runt of werkt binnen een groter team: de aanpak past zich aan aan jouw schaal en situatie.</p>
+                <h3 class="step-title">Geen lange intake</h3>
+                <p class="step-description">Je hoeft geen uitgebreide briefing of gesprekken voor te bereiden. Met gerichte input kunnen we direct inhoudelijk starten.
+</p>
               </div>
             </div>
 
@@ -568,8 +569,8 @@ Bij elk project start ik standaard met een concrete demo van jouw website, zodat
                 </svg>
               </div>
               <div>
-                <h3 class="step-title">Geen standaardoplossing</h3>
-                <p class="step-description">Met volledig handmatig ontwerp krijg je precies wat past bij jouw bedrijf en doelstelling.</p>
+                <h3 class="step-title">Duidelijke beslismomenten</h3>
+                <p class="step-description">Je weet vooraf wanneer je feedback geeft en wanneer er keuzes worden gemaakt. Geen vaag traject of eindeloze revisies.</p>
               </div>
             </div>
 
@@ -581,8 +582,8 @@ Bij elk project start ik standaard met een concrete demo van jouw website, zodat
                 </svg>
               </div>
               <div>
-                <h3 class="step-title">Heldere samenwerking</h3>
-                <p class="step-description">Je blijft betrokken bij keuzes en voortgang. Feedbackmomenten zijn duidelijk en overzichtelijk, zonder onnodige overleggen.</p>
+                <h3 class="step-title">Techniek onder controle</h3>
+                <p class="step-description">Structuur, snelheid en stabiliteit worden bewaakt tijdens het hele traject. Jij hoeft je niet bezig te houden met technische details.</p>
               </div>
             </div>
 
@@ -595,8 +596,8 @@ Bij elk project start ik standaard met een concrete demo van jouw website, zodat
                 </svg>
               </div>
               <div>
-                <h3 class="step-title">Klaar voor groei</h3>
-                <p class="step-description">De website wordt opgeleverd met een stabiele, uitbreidbare basis die flexibel is voor toekomstige aanpassingen.</p>
+                <h3 class="step-title">Oplevering zonder losse eindjes</h3>
+                <p class="step-description">De website wordt pas live gezet wanneer alles klopt en werkt zoals afgesproken. Geen half werk of open punten achteraf.</p>
               </div>
             </div>
           </div>
