--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <span class="italic">die klaar zijn met half werk</span>
       </h1>
       <p class="hero-description"> 
-Voor zzp en mkb in Limburg die vooruit willen met een sterke website.
+Voor ondernemers in Limburg die geen genoegen nemen met middelmaat.
       </p>
 
       <!-- Email Form -->
