--- a/index.html
+++ b/index.html
@@ -261,6 +261,77 @@ Compleet opgeleverd.</p>
       </div>
     </div>
 
+    <!-- About Nest Section -->
+    <section class="about-nest-section">
+      <div class="about-nest-container">
+        <div class="about-nest-content">
+          <div class="about-nest-text">
+            <p class="about-nest-label">NEEM EEN KIJKJE IN</p>
+            <h2 class="about-nest-heading">Mijn werk</h2>
+            <p class="about-nest-description">
+              Een website moet meteen goed voelen. Rust, overzicht en duidelijkheid geen drukte, geen loze beloftes. Bezoekers willen in één oogopslag begrijpen wie je bent, wat je doet en of ze je kunnen vertrouwen. Als dat niet klopt, zijn ze weg. Daarom bouw ik websites vanuit structuur en logica, niet vanuit trends of trucjes. Alles draait om helderheid: snelle laadtijmen, een duidelijke opbouw en een ervaring die klopt van begin tot eind.<br>
+              <br>
+Ik ben Kay Huybreghs uit Venlo en bouw sinds jaren sterke websites voor ondernemers. Ik werk rechtlijnig met duidelijke communicatie en eerlijke keuzes. Of je nu solo begint, een team runt of wilt schalen — de aanpak blijft hetzelfde: een website die technisch sterk is en je bedrijf professioneel presenteert.
+            </p>
+            <button class="about-nest-button">
+              Meer over ons
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <line x1="5" y1="12" x2="19" y2="12"></line>
+                <polyline points="12 5 19 12 12 19"></polyline>
+              </svg>
+            </button>
+          </div>
+
+          <div class="about-nest-images">
+            <div class="about-nest-track">
+              <div class="about-nest-slide active">
+                <img src="https://images.pexels.com/photos/3183197/pexels-photo-3183197.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Team workspace 1" class="about-nest-image" loading="lazy">
+                <img src="https://images.pexels.com/photos/3184317/pexels-photo-3184317.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Team accent 1" class="about-nest-image-accent" loading="lazy">
+              </div>
+              <div class="about-nest-slide">
+                <img src="https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Team workspace 2" class="about-nest-image" loading="lazy">
+                <img src="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Team accent 2" class="about-nest-image-accent" loading="lazy">
+              </div>
+              <div class="about-nest-slide">
+                <img src="https://images.pexels.com/photos/3184360/pexels-photo-3184360.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Team workspace 3" class="about-nest-image" loading="lazy">
+                <img src="https://images.pexels.com/photos/3184465/pexels-photo-3184465.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Team accent 3" class="about-nest-image-accent" loading="lazy">
+              </div>
+              <div class="about-nest-slide">
+                <img src="https://images.pexels.com/photos/3183153/pexels-photo-3183153.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Team workspace 4" class="about-nest-image" loading="lazy">
+                <img src="https://images.pexels.com/photos/3182763/pexels-photo-3182763.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Team accent 4" class="about-nest-image-accent" loading="lazy">
+              </div>
+              <div class="about-nest-slide">
+                <img src="https://images.pexels.com/photos/3183170/pexels-photo-3183170.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Team workspace 5" class="about-nest-image" loading="lazy">
+                <img src="https://images.pexels.com/photos/3184296/pexels-photo-3184296.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Team accent 5" class="about-nest-image-accent" loading="lazy">
+              </div>
+            </div>
+
+            <div class="about-nest-controls">
+              <button class="about-nest-arrow about-nest-arrow-prev" aria-label="Previous">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <line x1="19" y1="12" x2="5" y2="12"></line>
+                  <polyline points="12 19 5 12 12 5"></polyline>
+                </svg>
+              </button>
+              <button class="about-nest-arrow about-nest-arrow-next" aria-label="Next">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <line x1="5" y1="12" x2="19" y2="12"></line>
+                  <polyline points="12 5 19 12 12 19"></polyline>
+                </svg>
+              </button>
+            </div>
+
+            <div class="about-nest-dots">
+              <button class="about-nest-dot active" data-slide="0" aria-label="Go to slide 1"></button>
+              <button class="about-nest-dot" data-slide="1" aria-label="Go to slide 2"></button>
+              <button class="about-nest-dot" data-slide="2" aria-label="Go to slide 3"></button>
+              <button class="about-nest-dot" data-slide="3" aria-label="Go to slide 4"></button>
+              <button class="about-nest-dot" data-slide="4" aria-label="Go to slide 5"></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Section 3: Eerst Kijken, Dan Pas Betalen + Collage -->
     <section class="demo-collage-section">
@@ -598,78 +669,6 @@ Bij elk project start ik standaard met een concrete demo van jouw website, zodat
                 <h3 class="step-title">Klaar voor groei</h3>
                 <p class="step-description">De website wordt opgeleverd met een stabiele, uitbreidbare basis die flexibel is voor toekomstige aanpassingen.</p>
               </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- About Nest Section -->
-    <section class="about-nest-section">
-      <div class="about-nest-container">
-        <div class="about-nest-content">
-          <div class="about-nest-text">
-            <p class="about-nest-label">NEEM EEN KIJKJE IN</p>
-            <h2 class="about-nest-heading">Mijn werk</h2>
-            <p class="about-nest-description">
-              Een website moet meteen goed voelen. Rust, overzicht en duidelijkheid geen drukte, geen loze beloftes. Bezoekers willen in één oogopslag begrijpen wie je bent, wat je doet en of ze je kunnen vertrouwen. Als dat niet klopt, zijn ze weg. Daarom bouw ik websites vanuit structuur en logica, niet vanuit trends of trucjes. Alles draait om helderheid: snelle laadtijden, een duidelijke opbouw en een ervaring die klopt van begin tot eind.<br>
-              <br>
-Ik ben Kay Huybreghs uit Venlo en bouw sinds jaren sterke websites voor ondernemers. Ik werk rechtlijnig met duidelijke communicatie en eerlijke keuzes. Of je nu solo begint, een team runt of wilt schalen — de aanpak blijft hetzelfde: een website die technisch sterk is en je bedrijf professioneel presenteert.
-            </p>
-            <button class="about-nest-button">
-              Meer over ons
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <line x1="5" y1="12" x2="19" y2="12"></line>
-                <polyline points="12 5 19 12 12 19"></polyline>
-              </svg>
-            </button>
-          </div>
-
-          <div class="about-nest-images">
-            <div class="about-nest-track">
-              <div class="about-nest-slide active">
-                <img src="https://images.pexels.com/photos/3183197/pexels-photo-3183197.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Team workspace 1" class="about-nest-image" loading="lazy">
-                <img src="https://images.pexels.com/photos/3184317/pexels-photo-3184317.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Team accent 1" class="about-nest-image-accent" loading="lazy">
-              </div>
-              <div class="about-nest-slide">
-                <img src="https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Team workspace 2" class="about-nest-image" loading="lazy">
-                <img src="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Team accent 2" class="about-nest-image-accent" loading="lazy">
-              </div>
-              <div class="about-nest-slide">
-                <img src="https://images.pexels.com/photos/3184360/pexels-photo-3184360.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Team workspace 3" class="about-nest-image" loading="lazy">
-                <img src="https://images.pexels.com/photos/3184465/pexels-photo-3184465.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Team accent 3" class="about-nest-image-accent" loading="lazy">
-              </div>
-              <div class="about-nest-slide">
-                <img src="https://images.pexels.com/photos/3183153/pexels-photo-3183153.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Team workspace 4" class="about-nest-image" loading="lazy">
-                <img src="https://images.pexels.com/photos/3182763/pexels-photo-3182763.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Team accent 4" class="about-nest-image-accent" loading="lazy">
-              </div>
-              <div class="about-nest-slide">
-                <img src="https://images.pexels.com/photos/3183170/pexels-photo-3183170.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Team workspace 5" class="about-nest-image" loading="lazy">
-                <img src="https://images.pexels.com/photos/3184296/pexels-photo-3184296.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Team accent 5" class="about-nest-image-accent" loading="lazy">
-              </div>
-            </div>
-
-            <div class="about-nest-controls">
-              <button class="about-nest-arrow about-nest-arrow-prev" aria-label="Previous">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <line x1="19" y1="12" x2="5" y2="12"></line>
-                  <polyline points="12 19 5 12 12 5"></polyline>
-                </svg>
-              </button>
-              <button class="about-nest-arrow about-nest-arrow-next" aria-label="Next">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <line x1="5" y1="12" x2="19" y2="12"></line>
-                  <polyline points="12 5 19 12 12 19"></polyline>
-                </svg>
-              </button>
-            </div>
-
-            <div class="about-nest-dots">
-              <button class="about-nest-dot active" data-slide="0" aria-label="Go to slide 1"></button>
-              <button class="about-nest-dot" data-slide="1" aria-label="Go to slide 2"></button>
-              <button class="about-nest-dot" data-slide="2" aria-label="Go to slide 3"></button>
-              <button class="about-nest-dot" data-slide="3" aria-label="Go to slide 4"></button>
-              <button class="about-nest-dot" data-slide="4" aria-label="Go to slide 5"></button>
             </div>
           </div>
         </div>
