--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@ Bij elk project start ik standaard met een concrete demo van jouw website, zodat
                 <div class="faq-answer-content">
                   <div class="faq-answer-text">
                     <p>Wanneer je een aanvraag doet, maak ik binnen 1–2 dagen een eerste versie van jouw homepage.<br>
-Dit is altijd gebaseerd op jouw stijlkeuzes en bedrijfsdoelen — geen standaardwerk.</p>
+Dit is altijd gebaseerd op jouw stijlkeuzes en bedrijfsdoelen geen standaardwerk.</p>
                     <p>Je krijgt daarna een live link waar je jouw demo kunt bekijken. Pas ná jouw goedkeuring start ik met het echte project. Vind je het niets? Dan stopt het gewoon zonder kosten, zonder verplichting.<br>
 Ik vertrouw op mijn werk en wil dat jij vooraf precies ziet wat je kunt verwachten.</p>
                     <p>Kies je een pakket? Dan kun je afhankelijk van je keuze binnen één week online zijn.</p>
@@ -773,7 +773,7 @@ Ik vertrouw op mijn werk en wil dat jij vooraf precies ziet wat je kunt verwacht
               <div class="faq-answer">
                 <div class="faq-answer-content">
                   <div class="faq-answer-text">
-                    <p>Ja. Alles wordt volledig met de hand gecodeerd in HTML, CSS en JavaScript — geen WordPress, templates of page-builders.</p>
+                    <p>Ja. Alles wordt volledig met de hand gecodeerd in HTML, CSS en JavaScript geen WordPress, templates of page-builders.</p>
                     <span class="faq-list-intro">Dat betekent:</span>
                     <ul>
                       <li>Snelle laadtijden dankzij lichte, optimale code</li>
@@ -781,7 +781,7 @@ Ik vertrouw op mijn werk en wil dat jij vooraf precies ziet wat je kunt verwacht
                       <li>Veilig en schaalbaar voor de toekomst</li>
                       <li>Volledig aanpasbaar naar jouw wensen</li>
                     </ul>
-                    <p>Ik bouw iedere website alsof het een uniek project is — passend bij jouw bedrijf, doelgroep en regio (bijv. Venlo, Peel en Maas of de rest van Limburg).</p>
+                    <p>Ik bouw iedere website alsof het een uniek project is passend bij jouw bedrijf, doelgroep en regio (bijv. Venlo, Peel en Maas of de rest van Limburg).</p>
                     
                   </div>
                 </div>
@@ -863,7 +863,7 @@ Gezamenlijk zetten we jouw bedrijf online neer zoals het hoort.</p>
               <div class="faq-answer">
                 <div class="faq-answer-content">
                   <div class="faq-answer-text">
-                    <p>Ja. Ik richt me op ondernemers in Limburg, maar ik bouw net zo goed websites voor bedrijven buiten de regio. Ik kijk altijd naar jouw markt en doelgroep, zodat het ontwerp en de lokale SEO passen bij waar jouw klanten zitten. Of je bedrijf nu in Venlo, Brabant of verder zit — ik pas het gewoon aan op jouw situatie. Het proces blijft hetzelfde: jij levert jouw voorkeuren aan en ik zorg dat het eindresultaat precies aansluit op jouw bedrijf. Zo krijg je ook buiten Limburg een website die professioneel en herkenbaar overkomt.</p>
+                    <p>Ja. Ik richt me op ondernemers in Limburg, maar ik bouw net zo goed websites voor bedrijven buiten de regio. Ik kijk altijd naar jouw markt en doelgroep, zodat het ontwerp en de lokale SEO passen bij waar jouw klanten zitten. Of je bedrijf nu in Venlo, Brabant of verder zit ik pas het gewoon aan op jouw situatie. Het proces blijft hetzelfde: jij levert jouw voorkeuren aan en ik zorg dat het eindresultaat precies aansluit op jouw bedrijf. Zo krijg je ook buiten Limburg een website die professioneel en herkenbaar overkomt.</p>
                   </div>
                 </div>
               </div>
@@ -879,7 +879,7 @@ Gezamenlijk zetten we jouw bedrijf online neer zoals het hoort.</p>
               <div class="faq-answer">
                 <div class="faq-answer-content">
                   <div class="faq-answer-text">
-                    <p>Na oplevering blijft alles gewoon goed draaien: je website blijft online, snel en technisch verzorgd. Eventuele maandelijkse aanpassingen (bij Pro of Premium) voer ik voor je uit wanneer jij dat nodig hebt — niks verplicht, geen gedoe.<br><br>
+                    <p>Na oplevering blijft alles gewoon goed draaien: je website blijft online, snel en technisch verzorgd. Eventuele maandelijkse aanpassingen (bij Pro of Premium) voer ik voor je uit wanneer jij dat nodig hebt niks verplicht, geen gedoe.<br><br>
 Google Search Console en Google Analytics worden netjes ingericht. Wil je zelf inzicht in je cijfers? Dan geef ik je toegang en leg ik uit waar je op moet letten.</p>
                   </div>
                 </div>
@@ -897,7 +897,7 @@ Google Search Console en Google Analytics worden netjes ingericht. Wil je zelf i
                 <div class="faq-answer-content">
                   <div class="faq-answer-text">
                     <p>Ja, natuurlijk. Als je al een domein hebt, kunnen we dat gewoon blijven gebruiken. Ik zorg voor de volledige technische koppeling, maar ik heb wél toegang nodig tot jouw domeinbeheer. Dat regel je eenvoudig zelf bij jouw huidige provider.</p>
-                    <p>Heb je nog geen domein? Dan regel ik alles voor je: de registratie, betaling, DNS-instellingen en de volledige SSL-beveiliging. Jij geeft alleen je gewenste domeinnaam door — de rest neem ik uit handen.</p>
+                    <p>Heb je nog geen domein? Dan regel ik alles voor je: de registratie, betaling, DNS-instellingen en de volledige SSL beveiliging. Jij geeft alleen je gewenste domeinnaam door de rest neem ik uit handen.</p>
                   </div>
                 </div>
               </div>
