--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <!-- Hero Section -->
     <div class="hero">
       <h1 class="hero-title">
-        <span class="italic">Websites voor ondernemers die klaar</span><br>
-        <span class="italic">zijn met half werk</span>
+        <span class="italic">Websites voor ondernemers die klaar zijn</span><br>
+        <span class="italic">met half werk</span>
       </h1>
       <p class="hero-description"> 
 Voor zzp en mkb in Limburg die vooruit willen met een sterke website.
