--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ Compleet opgeleverd.</p>
             <p class="about-nest-description">
               Een website moet meteen goed voelen. Rust, overzicht en duidelijkheid geen drukte, geen loze beloftes. Bezoekers willen in één oogopslag begrijpen wie je bent, wat je doet en of ze je kunnen vertrouwen. Als dat niet klopt, zijn ze weg. Daarom bouw ik websites vanuit structuur en logica, niet vanuit trends of trucjes. Alles draait om helderheid: snelle laadtijmen, een duidelijke opbouw en een ervaring die klopt van begin tot eind.<br>
               <br>
-Ik ben Kay Huybreghs uit Venlo en bouw sinds jaren sterke websites voor ondernemers. Ik werk rechtlijnig met duidelijke communicatie en eerlijke keuzes. Of je nu solo begint, een team runt of wilt schalen — de aanpak blijft hetzelfde: een website die technisch sterk is en je bedrijf professioneel presenteert.
+Ik ben Kay Huybreghs uit Venlo en bouw sinds jaren sterke websites voor ondernemers. Ik werk rechtlijnig met duidelijke communicatie en eerlijke keuzes. Of je nu solo begint, een team runt of wilt schalen de aanpak blijft hetzelfde: een website die technisch sterk is en je bedrijf professioneel presenteert.
             </p>
             <button class="about-nest-button">
               Meer over ons
@@ -591,7 +591,7 @@ Bij elk project start ik standaard met een concrete demo van jouw website, zodat
           <div class="process-text">
             <div class="process-text">
   <p class="process-intro">
-    Of je nu zzp’er bent, een mkb-bedrijf runt of werkt binnen een groter team: het proces blijft overzichtelijk en beheersbaar. De aanpak is altijd afgestemd op de schaal en fase van jouw bedrijf — van een eerste professionele online basis tot een website die meerdere diensten, vestigingen of doelgroepen ondersteunt.
+    Of je nu zzp’er bent, een mkb-bedrijf runt of werkt binnen een groter team: het proces blijft overzichtelijk en beheersbaar. De aanpak is altijd afgestemd op de schaal en fase van jouw bedrijf van een eerste professionele online basis tot een website die meerdere diensten, vestigingen of doelgroepen ondersteunt.
   </p>
 
   <p class="process-intro">
@@ -599,7 +599,7 @@ Bij elk project start ik standaard met een concrete demo van jouw website, zodat
   </p>
 
   <p class="process-intro">
-    Op basis daarvan werk ik een eerste concrete opzet uit. Die laat zien hoe structuur, uitstraling en inhoud samenkomen voor jouw type bedrijf. Zo kun je beoordelen of de richting klopt voordat we verder bouwen — transparant en zonder verplichtingen.
+    Op basis daarvan werk ik een eerste concrete opzet uit. Die laat zien hoe structuur, uitstraling en inhoud samenkomen voor jouw type bedrijf. Zo kun je beoordelen of de richting klopt voordat we verder bouwen transparant en zonder verplichtingen.
   </p>
 
   <p class="process-intro">
