--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Voor zzp en mkb in Limburg die vooruit willen met een sterke website.
       </p>
 
       <!-- Email Form -->
-      <div class="email-section">
+      <div class="email-section"> 
         <p class="email-label">Gratis meedenken over jouw website?</p>
         <form class="email-form" id="emailForm">
           <div class="email-input-wrapper">
@@ -74,7 +74,7 @@ Voor zzp en mkb in Limburg die vooruit willen met een sterke website.
               <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
               <polyline points="22,6 12,13 2,6"></polyline>
             </svg>
-            <input type="email" placeholder="John@gmail.com" class="email-input" id="emailInput" name="email" required>
+            <input type="email" placeholder="John@gmail.com" class="email-input" id="emailInput" required>
           </div>
           <button type="submit" class="email-submit">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -83,7 +83,6 @@ Voor zzp en mkb in Limburg die vooruit willen met een sterke website.
             </svg>
           </button>
         </form>
-        <div id="hero-email-message" class="hero-email-message" style="display: none;"></div>
         <p class="email-label">Vul je e-mail in en ontvang binnen 24 uur reactie.</p>
       </div>
     </div>
@@ -1098,7 +1097,6 @@ Vertel kort wat je zoekt en waar je tegenaan loopt. Ik denk met je mee en geef e
 
   <script src="/js/navbar.js" defer></script>
   <script src="/js/index.js" defer></script>
-  <script src="/js/hero-email.js" defer></script>
   <script src="/js/footer-form.js" defer></script>
   <script src="/js/faq.js" defer></script>
   <script src="/js/works-story.js" defer></script>
