--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preload" href="navbar.css" as="style">
   <link rel="preload" href="/khcustomweb_logo.webp" as="image">
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="openingspagina.css">
   <link rel="stylesheet" href="navbar.css">
   <link rel="stylesheet" href="footer.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/faq.css" media="print" onload="this.media='all'">
