--- a/index.html
+++ b/index.html
@@ -5,53 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KHCustomWeb - Webdesign voor ondernemers in Limburg</title>
 
-  <link rel="preload" href="styles.css" as="style">
-  <link rel="preload" href="navbar.css" as="style">
   <link rel="preload" href="/khcustomweb_logo.webp" as="image">
 
   <link rel="stylesheet" href="openingspagina.css">
-  <link rel="stylesheet" href="navbar.css">
-  <link rel="stylesheet" href="footer.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/faq.css" media="print" onload="this.media='all'">
   <link rel="stylesheet" href="/css/works-story.css" media="print" onload="this.media='all'">
   <noscript>
-    <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="/css/faq.css">
     <link rel="stylesheet" href="/css/works-story.css">
   </noscript>
 </head>
 <body>
-  <!-- Sticky Navbar -->
-  <nav class="sticky-navbar" id="stickyNavbar">
-    <div class="navbar-container">
-      <a href="#home" class="navbar-logo-section">
-        <div class="navbar-logo-wrapper">
-          <img src="/khcustomweb_logo.webp" alt="KH Custom Web Logo" class="navbar-logo">
-        </div>
-        <span class="navbar-brand-text">KHCustomWeb</span>
-      </a>
-
-      <button class="navbar-menu-toggle" id="menuToggle" aria-label="Toggle menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-
-      <div class="navbar-links" id="navbarLinks">
-        <a href="#home" class="navbar-link active">Home</a>
-        <a href="#diensten" class="navbar-link">Diensten</a>
-        <a href="#over-ons" class="navbar-link">Over ons</a>
-        <a href="#portfolio" class="navbar-link">Portfolio</a>
-        <a href="#contact" class="navbar-cta">
-          <span>Neem contact op</span>
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <line x1="5" y1="12" x2="19" y2="12"></line>
-            <polyline points="12 5 19 12 12 19"></polyline>
-          </svg>
-        </a>
-      </div>
-    </div>
-  </nav>
+<%- NAVBAR %>
 
   <div class="container">
 
@@ -382,55 +347,6 @@ Bij elk project start ik standaard met een concrete demo van jouw website, zodat
           <div class="bento-tile"><img src="https://images.unsplash.com/photo-1503387762-592deb58ef4e?auto=format&fit=crop&w=800&q=80" alt="Website voor dakdekker"><span class="bento-kpi">+40% zichtbaarheid</span><div class="bento-veil"></div><div class="bento-content"><h3 class="bento-title">Website voor dakdekker</h3><p class="bento-desc">Technisch sterk, conversiegericht en lokaal vindbaar.</p><a class="bento-cta">Bekijk live voorbeeld →</a></div></div>
           <div class="bento-tile"><img src="https://images.unsplash.com/photo-1556761175-4b46a572b786?auto=format&fit=crop&w=800&q=80" alt="Website voor hovenier"><span class="bento-kpi">99.9% uptime</span><div class="bento-veil"></div><div class="bento-content"><h3 class="bento-title">Website voor hovenier</h3><p class="bento-desc">Snel, stabiel en visueel sterk voor jouw portfolio.</p><a class="bento-cta">Bekijk live voorbeeld →</a></div></div>
           <div class="bento-tile"><img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=800&q=80" alt="Website voor elektricien"><span class="bento-kpi">-58% paginagewicht</span><div class="bento-veil"></div><div class="bento-content"><h3 class="bento-title">Website voor elektricien</h3><p class="bento-desc">Snelle laadtijden en duidelijke routes naar contact.</p><a class="bento-cta">Bekijk live voorbeeld →</a></div></div>
-        </div>
-      </div>
-    </section>
-
-    <!-- CTA Banner Section -->
-    <section class="cta-banner-section">
-      <div class="cta-banner-container">
-        <div class="cta-banner">
-          <div class="cta-circles-container">
-            <div class="cta-circles-wrapper">
-              <div class="cta-circles">
-                <div class="cta-circle cta-circle-1"></div>
-                <div class="cta-circle cta-circle-2"></div>
-                <div class="cta-circle cta-circle-3"></div>
-                <div class="cta-circle cta-circle-4"></div>
-              </div>
-            </div>
-          </div>
-
-          <div class="cta-floating-text-container">
-            <div class="cta-floating-text">
-              KHCUSTOMWEB. KHCUSTOMWEB. KHCUSTOMWEB. KHCUSTOMWEB. KHCUSTOMWEB.
-            </div>
-          </div>
-
-          <div class="cta-content">
-            <h2 class="cta-title">Gratis demo van jouw website?</h2>
-            <p class="cta-description">
-              Zo hoef je geen beslissing te nemen op gevoel of beloftes. Je ziet rustig wat je krijgt, kunt het laten bezinken en bepaalt zelf of dit past bij jouw bedrijf.
-            </p>
-
-            <div class="cta-buttons">
-              <a href="#contact" class="cta-btn">
-                <span>Ontvang je gratis demo</span>
-                <svg class="cta-arrow-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                  <line x1="5" y1="12" x2="19" y2="12"></line>
-                  <polyline points="12 5 19 12 12 19"></polyline>
-                </svg>
-              </a>
-
-              <a href="#contact" class="cta-btn">
-                <span>Twijfel? Stel je vraag</span>
-                <svg class="cta-arrow-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                  <line x1="5" y1="12" x2="19" y2="12"></line>
-                  <polyline points="12 5 19 12 12 19"></polyline>
-                </svg>
-              </a>
-            </div>
-          </div>
         </div>
       </div>
     </section>
@@ -928,195 +844,8 @@ Google Search Console en Google Analytics worden netjes ingericht. Wil je zelf i
 
   </div>
 
-  <!-- Footer -->
-  <footer class="site-footer">
-    <div class="footer-container">
-      <!-- CTA Section -->
-      <div class="footer-cta-section">
-        <div class="cta-banner">
-          <div class="cta-circles-container">
-            <div class="cta-circles-wrapper">
-              <div class="cta-circles">
-                <div class="cta-circle cta-circle-1"></div>
-                <div class="cta-circle cta-circle-2"></div>
-                <div class="cta-circle cta-circle-3"></div>
-                <div class="cta-circle cta-circle-4"></div>
-              </div>
-            </div>
-          </div>
+<%- FOOTER_CTA %>
 
-          <div class="cta-floating-text-container">
-            <div class="cta-floating-text">
-              KHCUSTOMWEB. KHCUSTOMWEB. KHCUSTOMWEB. KHCUSTOMWEB. KHCUSTOMWEB.
-            </div>
-          </div>
-
-          <div class="footer-cta-content">
-            <div class="footer-cta-text">
-              <h2>Klaar om serieus werk te maken van je website?</h2>
-              <p>
-Vertel kort wat je zoekt en waar je tegenaan loopt. Ik denk met je mee en geef eerlijk advies over wat voor jouw bedrijf werkt.</p>
-            </div>
-
-            <form class="footer-contact-form" id="footerContactForm">
-              <div class="footer-form-row">
-                <div class="footer-form-group">
-                  <label class="footer-form-label" for="footer-name">Naam *</label>
-                  <input
-                    type="text"
-                    id="footer-name"
-                    name="name"
-                    class="footer-form-input"
-                    placeholder="Jouw naam"
-                    required
-                  />
-                </div>
-                <div class="footer-form-group">
-                  <label class="footer-form-label" for="footer-email">E-mail *</label>
-                  <input
-                    type="email"
-                    id="footer-email"
-                    name="email"
-                    class="footer-form-input"
-                    placeholder="jouw@email.nl"
-                    required
-                  />
-                </div>
-              </div>
-
-              <div class="footer-form-group">
-                <label class="footer-form-label" for="footer-message">Bericht *</label>
-                <textarea
-                  id="footer-message"
-                  name="message"
-                  class="footer-form-textarea"
-                  placeholder="Waar kan ik je mee helpen?"
-                  required
-                ></textarea>
-              </div>
-
-              <button type="submit" class="footer-form-submit">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <line x1="22" y1="2" x2="11" y2="13"></line>
-                  <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
-                </svg>
-                <span>Versturen</span>
-              </button>
-
-              <div id="footer-form-message" class="footer-form-message" style="display: none;"></div>
-            </form>
-          </div>
-        </div>
-      </div>
-
-      <!-- Footer Main -->
-      <div class="footer-main">
-        <div class="footer-main-grid">
-          <!-- Brand Column -->
-          <div class="footer-brand">
-          <div class="footer-logo-section">
-            <div class="footer-logo-wrapper">
-              <img src="/khcustomweb_logo.webp" alt="KH Custom Web Logo" class="footer-logo">
-            </div>
-            <span class="footer-brand-name">KHCustomWeb</span>
-          </div>
-          <p class="footer-tagline">Webdesign voor kleine ondernemers in Limburg. Binnen 7 dagen online.</p>
-
-            <div class="footer-contact-info">
-            <div class="footer-contact-item">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
-              </svg>
-              <a href="tel:0612345678">06 123 456 78</a>
-            </div>
-            <div class="footer-contact-item">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                <polyline points="22,6 12,13 2,6"></polyline>
-              </svg>
-              <a href="mailto:info@khcustomweb.nl">info@khcustomweb.nl</a>
-            </div>
-            <div class="footer-contact-item">
-              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-                <circle cx="12" cy="10" r="3"></circle>
-              </svg>
-              <span>Venlo, Nederland</span>
-            </div>
-          </div>
-        </div>
-
-          <!-- Quick Links Column -->
-          <div class="footer-column">
-          <h4 class="footer-column-title">Product</h4>
-          <ul class="footer-links-list">
-            <li><a href="#diensten" class="footer-link">Prijzen & Pakketten</a></li>
-            <li><a href="#portfolio" class="footer-link">Portfolio</a></li>
-            <li><a href="#branches" class="footer-link">Branches</a></li>
-            <li><a href="#contact" class="footer-link">Demo aanvragen</a></li>
-          </ul>
-        </div>
-
-          <!-- Company Column -->
-          <div class="footer-column">
-          <h4 class="footer-column-title">Company</h4>
-          <ul class="footer-links-list">
-            <li><a href="#over-ons" class="footer-link">Over Ons</a></li>
-            <li><a href="#blog" class="footer-link">Blog & SEO Tips</a></li>
-            <li><a href="#reviews" class="footer-link">Klantervaringen</a></li>
-            <li><a href="#faq" class="footer-link">Veelgestelde vragen</a></li>
-          </ul>
-        </div>
-
-          <!-- Support Column -->
-          <div class="footer-column">
-          <h4 class="footer-column-title">Support</h4>
-          <ul class="footer-links-list">
-            <li><a href="#contact" class="footer-link">Contact</a></li>
-            <li><a href="#privacy" class="footer-link">Privacyverklaring</a></li>
-            <li><a href="#terms" class="footer-link">Algemene voorwaarden</a></li>
-            <li><a href="#sitemap" class="footer-link">Sitemap</a></li>
-          </ul>
-        </div>
-        </div>
-
-        <!-- Footer Bottom -->
-      <div class="footer-bottom">
-        <div class="footer-info">
-          <p class="footer-copyright">&copy; 2025 KHCustomWeb. All rights reserved</p>
-          <div class="footer-details">
-            <span>KvK: 12345678</span>
-            <span>Vrijgesteld van btw (KOR)</span>
-          </div>
-        </div>
-
-        <div class="footer-social">
-          <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="footer-social-link" aria-label="Facebook">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
-            </svg>
-          </a>
-          <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" class="footer-social-link" aria-label="Instagram">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
-            </svg>
-          </a>
-          <a href="https://www.linkedin.com/in/kay-huybreghs-6b335b364/" target="_blank" rel="noopener noreferrer" class="footer-social-link linkedin" aria-label="LinkedIn">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
-            </svg>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  </footer>
-
-
-  <script src="/js/navbar.js" defer></script>
   <script src="/js/index.js" defer></script>
-  <script src="/js/footer-form.js" defer></script>
-  <script src="/js/faq.js" defer></script>
-  <script src="/js/works-story.js" defer></script>
 </body>
 </html>
