--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KHCustomWeb - Webdesign voor ondernemers in Limburg</title>
 
-  <link rel="preload" href="/logo-khcustomweb-groot.webp" as="image">
+  <link rel="preload" href="/khcustomweb_logo.webp" as="image">
 
   <link rel="stylesheet" href="openingspagina.css">
+  <link rel="stylesheet" href="/css/faq.css" media="print" onload="this.media='all'">
+  <link rel="stylesheet" href="/css/works-story.css" media="print" onload="this.media='all'">
+  <noscript>
+    <link rel="stylesheet" href="/css/faq.css">
+    <link rel="stylesheet" href="/css/works-story.css">
+  </noscript>
 </head>
 <body>
 <%- NAVBAR %>
@@ -106,7 +112,7 @@ Voor zzp en mkb in Limburg die vooruit willen met een sterke website.
       <div class="features-column">
         <div class="feature-card">
           <div class="feature-icon feature-icon-image">
-            <img src="/logo-khcustomweb-klein.webp" alt="KH Custom Web">
+            <img src="/khcustomweb_logo.webp" alt="KH Custom Web">
           </div>
           <div class="feature-content">
             <h3 class="feature-title">Maatwerk voor jouw branche</h3>
@@ -117,7 +123,7 @@ Compleet opgeleverd.</p>
 
         <div class="feature-card">
           <div class="feature-icon feature-icon-image">
-            <img src="/logo-khcustomweb-klein.webp" alt="KH Custom Web">
+            <img src="/khcustomweb_logo.webp" alt="KH Custom Web">
           </div>
           <div class="feature-content">
             <h3 class="feature-title">Vindbaar op Google</h3>
@@ -127,7 +133,7 @@ Compleet opgeleverd.</p>
 
         <div class="feature-card">
           <div class="feature-icon feature-icon-image">
-            <img src="/logo-khcustomweb-klein.webp" alt="KH Custom Web">
+            <img src="/khcustomweb_logo.webp" alt="KH Custom Web">
           </div>
           <div class="feature-content">
             <h3 class="feature-title">Voor ondernemers die willen winnen</h3>
@@ -137,7 +143,7 @@ Compleet opgeleverd.</p>
 
         <div class="feature-card">
           <div class="feature-icon feature-icon-image">
-            <img src="/logo-khcustomweb-klein.webp" alt="KH Custom Web">
+            <img src="/khcustomweb_logo.webp" alt="KH Custom Web">
           </div>
           <div class="feature-content">
             <h3 class="feature-title">Slimme functies geïntegreerd</h3>
@@ -151,7 +157,7 @@ Compleet opgeleverd.</p>
         <h3 class="analytics-title">Werk slimmer.<br>met integraties</h3>
         <div class="integration-circle">
           <div class="center-logo center-logo-image">
-            <img src="/logo-khcustomweb-groot.webp" alt="KH Custom Web">
+            <img src="/khcustomweb_logo_design.webp" alt="KH Custom Web">
           </div>
 
           <div class="circle-dashed"></div>
